# rust-fastmap

./: Cargo.toml  README.md
benches/: basic_bench.rs  words.txt
src/: lib.rs
tests/: basic_test.rs
